unpackaged/objects/Supply__c.object
<CustomObject>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>Date And Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Responsible Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Supplies</relationshipLabel>
        <relationshipName>Supplies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Supplies</relationshipLabel>
        <relationshipName>Supplies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TradingPoint__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trading Point</label>
        <referenceTo>TradingPoint__c</referenceTo>
        <relationshipLabel>Supplies</relationshipLabel>
        <relationshipName>Supplies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supply</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>